[package]
name = "consensus-pbft"
version = "0.1.0"
authors = ["chengevo <chengevo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = {version = "2.1.1", features = ["derive"]}
log = "0.4.14"
serde = "1.0.119"
serde_json = "1.0"
blake2 = "0.9.1"
rand = "0.8.5"
parking_lot = "0.11.1"
tokio = {version =  "1.19.2", features = ["rt", "macros"]}
futures-timer = "3.0.1"
futures = "0.3.14"

sp-api = "3.0.0"
sp-runtime = "3.0.0"
sp-utils = "3.0.0"
sc-service = '0.9.0'
sp-blockchain = "3.0.0"
sp-consensus = "0.9.0"


[dev-dependencies]
futures-test = "0.3.21"
tokio-test = "0.4.2"

[features]
std = ["parity-scale-codec/std"]