[package]
name = "sc-finality-pbft"
version = "0.1.0"
authors = ["chengevo <chengevo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-network = "0.9.0"
sp-blockchain = "3.0.0"
sp-consensus = "0.9.0"
sp-api = "3.0.0"
sc-client-api = "3.0.0"
sp-utils = "3.0.0"
futures = "0.3.14"
sp-runtime = "3.0.0"
sp-core = "3.0.0"
sc-service = { version = '0.9.0' }

log = "0.4.14"
futures-timer = "3.0.2"
parity-multiaddr = "0.11.2"
consensus-pbft = {path = "../consensus-pbft"}
runtime = {path = "../runtime"}
parity-scale-codec = "2.1.1"
